# PY_MICRO_HIL

./: .flake8  .gitignore  README.md  mkdocs.yml  peripherals_config.yaml  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
.github/workflows/: ci.yml  deploy_docs.yaml
core/: RPiPeripherals.py  framework_API.py  peripheral_config_loader.py  protocols.py  test_framework.py  test_group_factory.py
docs/: architecture.md  code_review.md  developer-guide.md  faq.md  getting-started.md  hardware-configuration.md  index.md  reports-and-artifacts.md  running-tests.md  test-api-reference.md  writing-tests.md
docs/drafts/: API.md  ARCHITECTURE.md
example/: peripherals_config.yaml
example/hil_tests/: test_modbus_communication_tests.py
hil_tests/: test_group_2.py
src/py_micro_hil/: RPiPeripherals.py  assertions.py  cli.py  dummyRPiPeripherals.py  framework_API.py  logger.py  peripheral_config_loader.py  peripheral_manager.py  platform.py  protocols.py  report_generator.py  test_framework.py  test_group_factory.py  tests_framework.py  tests_group_factory.py  utils.py
src/py_micro_hil/peripherals/: RPiPeripherals.py  modbus.py  protocols.py
tests/: conftest.py  test_RPiPeripherals.py  test_assertions.py  test_cli_runner.py  test_framework_API.py  test_gr_2.py  test_group_2.py  test_group_3.py  test_logger.py  test_modbus_communication_tests.py  test_peripheral_config_loader.py  test_peripheral_manager.py  test_protocols.py  test_report_generator.py  test_test_framework.py  test_test_group_factory.py
